<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/bg_search"
            android:layout_width="match_parent"
...


        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_search"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            tools:text="50 Results" />

        <androidx.appcompat.widget.SearchView
...
            android:visibility="gone"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnSettings"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@drawable/selector_back_button"
            android:scaleType="fitXY"
...
